PL-6730 Permissions REST API controller
